--- a/DailyChallenge/manifest.json
+++ b/DailyChallenge/manifest.json
@@ -1,1 +1,19 @@
+{
+  "manifest_version": 2,
 
+  "name": "DailyChallenge",
+  "description": "This extension displays a different programming question each day.",
+  "version": "0.1",
+
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html",
+    "default_title": "Begin"
+  },
+
+  "permissions": [
+    "activeTab",
+    "https://ajax.googleapis.com/"
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+}
