--- a/DailyChallenge/manifest.json
+++ b/DailyChallenge/manifest.json
@@ -5,6 +5,10 @@
   "description": "This extension displays a different programming question each day.",
   "version": "0.1",
 
+  "background": {
+    "scripts": ["background.js"]
+  },
+
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
@@ -14,6 +18,7 @@
   "permissions": [
     "<all_urls>",
     "activeTab",
+    "storage",
     "https://ajax.googleapis.com/"
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
